// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// See https://developers.google.com/protocol-buffers for what's going on here.

syntax = "proto3";

import "google/protobuf/empty.proto";

package source;

message ProtoSourceTimestamp {
    oneof partition_id {
        int32 kafka = 1;
        google.protobuf.Empty none = 2;
    }
    int64 mz_offset = 3;
}

message ProtoAssignedTimestamp {
    uint64 ts = 1;
}
